modified:   public/.htaccess 	modified:   resources/Views/admin/dashboard.php 	modified:   resources/Views/client/dashboard.php 	modified:   resources/Views/landing.php 	modified:   resources/Views/login.php 	modified:   routes/web.php

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,7 +1,8 @@
-
-
 RewriteEngine On
-# RewriteBase /myExpense/
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+# RewriteBase /smartEnergy/
+# Hide index.php
+RewriteCond %{REQUEST_URI} !^/index\.php
 RewriteRule ^ index.php [QSA,L]
+
+
+
