--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
-# RewriteBase /smartEnergy/
+RewriteBase /smartEnergy/
 # Hide index.php
 RewriteCond %{REQUEST_URI} !^/index\.php
 RewriteRule ^ index.php [QSA,L]
